<resources>
    <string name="app_name">login2</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="username_label">Usuario</string>
    <string name="password_label">Contraseña</string>
    <string name="username_hint">usuario@email.com</string>
    <string name="password_hint">**********</string>
    <string name="login_text">Iniciar sesion</string>
    <string name="email_check">Nombre de usuario inválido</string>
    <string name="password_check">Contraseña inválida</string>
</resources>